:bug: Fixes broken CSS due to changes

--- a/_sass/components/_shadow-img.scss
+++ b/_sass/components/_shadow-img.scss
@@ -1,4 +1,4 @@
 .shadow-img {
-  border-radius: var(--base-radius) / 2;
+  border-radius: calc(var(--base-radius) / 2);
   box-shadow: var(--base-shadow);
 }
