--- a/_sass/components/_syntax.scss
+++ b/_sass/components/_syntax.scss
@@ -4,7 +4,7 @@
 
 	background: white;
 	color: #929292;
-	margin: 0 0 var(--base-gap) / 2;
+	margin: 0 0 calc(var(--base-gap) / 2);
 	border-top: 4px solid rgba(0, 0, 0, 0.1);
   border-bottom: 4px solid rgba(0, 0, 0, 0.1);
 
